[refactor] Use dedicated string write function