@@ -59,7 +59,7 @@ public final class XQueryFailureLog {
                 Files.createDirectories(dir);
             }
             final Path file = dir.resolve(LOG_NAME);
-            Files.write(file, (firstLine + "\n").getBytes(StandardCharsets.UTF_8),
+            Files.writeString(file, firstLine + "\n",
                 StandardOpenOption.CREATE, StandardOpenOption.APPEND);
         } catch (final IOException ignored) {
             // do not affect test execution
